syntax="proto3";

package protocol;

service Protocol {
	rpc Call(Request) returns (Response) {}
	rpc Stream(StreamingRequest) returns (stream StreamingResponse) {}
	rpc PingPong(stream Ping) returns (stream Pong) {}
}

message Message {
	string Ver = 1;
	string Name = 2;
	string gender = 3;
	string Type = 4;
	string Addr = 5;
	string Phone = 6;
	string Company = 7;
	string Time = 8;
}

message Request {
	string name = 1;
}

message Response {
	string msg = 1;
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
